--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -22,3 +22,38 @@
     height: auto;
   }
 }
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1.5rem;
+  li {
+    padding: 0.5rem 1.5rem;
+    list-style: none;
+    border-radius: 1rem;
+    border: 1px solid transparent;
+
+    cursor: pointer;
+
+    transition: 0.3s all ease-out;
+    a {
+      font-family: var(--font-base);
+      font-weight: 500;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+    &:hover {
+      border: 1px solid var(--secondary-color);
+    }
+    &:last-child {
+      background-color: var(--secondary-color);
+      a {
+        color: var(--white-color);
+      }
+      &:hover {
+        background-color: rgb(64, 75, 190);
+      }
+    }
+  }
+}
