feat: get author id

--- a/client/src/components/Posts/Posts.scss
+++ b/client/src/components/Posts/Posts.scss
@@ -78,7 +78,8 @@
       font-weight: bold;
     }
     time {
-      font-size: 0.8rem;
+      font-weight: 700;
+      font-size: 0.7rem;
     }
   }
 }
