--- a/client/src/pages/Article/Article.scss
+++ b/client/src/pages/Article/Article.scss
@@ -6,6 +6,7 @@
   background-color: var(--primary-color);
 
   margin: 0 auto;
+  padding: 0.5rem 1rem;
 
   border-radius: 0.5rem;
   display: flex;
@@ -37,5 +38,20 @@
 
   h2 {
     line-height: 1.05;
+  }
+}
+.app__article-info {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  .app__posts-author {
+    font-size: 0.8rem;
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-weight: bold;
+  }
+  time {
+    font-weight: 700;
+    font-size: 0.7rem;
   }
 }
