--- a/client/src/pages/Article/Article.scss
+++ b/client/src/pages/Article/Article.scss
@@ -13,6 +13,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  h2 {
+    font-family: var(--font-base);
+  }
 }
 .app__article-img {
   max-height: 200px;
@@ -41,6 +44,7 @@
   }
 }
 .app__article-info {
+  font-family: var(--font-base);
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -54,4 +58,14 @@
     font-weight: 700;
     font-size: 0.7rem;
   }
+}
+.app__article-edit {
+  margin: 0.5rem 0rem;
+  padding: 0.25rem 1rem;
+  font-family: var(--font-base);
+  border: transparent;
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  font-weight: 500;
+  border-radius: 0.5rem;
 }
