--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,9 @@
   --gray-color: #6b7688;
   --brown-color: #46364a;
   --white-color: #ffffff;
+  --green-color: #52891d;
+  --red-color: #f60002;
+  --yellow-color: #f7a000;
 }
 
 * {
