--- a/client/src/pages/Article/Article.scss
+++ b/client/src/pages/Article/Article.scss
@@ -79,7 +79,7 @@
     padding: 0.25rem 1rem;
     font-family: var(--font-base);
     border: transparent;
-    background-color: var(--secondary-color);
+    background-color: var(--red-color);
     color: var(--white-color);
     font-weight: 500;
     border-radius: 0.5rem;
