--- a/client/src/pages/CreatePost/CreatPost.scss
+++ b/client/src/pages/CreatePost/CreatPost.scss
@@ -42,22 +42,27 @@
     border: 1px solid var(--gray-color);
   }
 
-  button {
-    width: 50%;
-    margin: 0 auto;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
+  .app__createPost-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end; /* Align button to flex-end */
+    margin-top: 1rem;
 
-    background-color: var(--secondary-color);
-    font-weight: bold;
-    color: var(--white-color);
-    font-family: var(--font-base);
-    border: none;
-    transition-property: background-color transform;
-    transition: 0.3s ease;
-    &:hover {
-      background-color: rgb(64, 75, 190);
-      transform: scale(101%);
+    .app__createPost-post {
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+
+      background-color: var(--secondary-color);
+      font-weight: bold;
+      color: var(--white-color);
+      font-family: var(--font-base);
+      border: none;
+      transition-property: background-color transform;
+      transition: 0.3s ease;
+      &:hover {
+        background-color: rgb(64, 75, 190);
+        transform: scale(101%);
+      }
     }
   }
 }
