feat: made application responsive

--- a/client/src/pages/Article/Article.scss
+++ b/client/src/pages/Article/Article.scss
@@ -16,6 +16,9 @@
   h2 {
     font-family: var(--font-base);
   }
+  @media screen and (max-width: 900px) {
+    width: 100%;
+  }
 }
 .app__article-img {
   max-height: 200px;
