--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -30,9 +30,9 @@
   align-items: center;
   gap: 1.5rem;
   .app__navbar-create {
-    width: 60px;
-    height: 60px;
-
+    width: 45px;
+    height: 45px;
+    padding: 0.25rem;
     border-radius: 50%;
     border: 1px solid transparent;
     display: flex;
@@ -50,7 +50,7 @@
     }
   }
   li {
-    padding: 0.5rem 1.5rem;
+    padding: 0.75rem 1.5rem;
     list-style: none;
     border-radius: 1rem;
     border: 1px solid transparent;
