--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -7,6 +7,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  // position: fixed;
+  // width: 100%;
+  // z-index: 5;
 }
 .app__navbar-logo {
   flex: 1;
